<resources>
    <string name="app_name">Flag Quiz</string>
    <string name="quiz_app">Flag Quiz</string>
    <string name="welcome">Welcome</string>
    <string name="inputname">Please Enter your name</string>
    <string name="startBtn">Start</string>
    <string name="title_activity_quiz_questions">QuizQuestionsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="submit">SUBMIT</string>
    <string name="hint_name">Name</string>
    <string name="title_activity_result">ResultActivity</string>
</resources>